--- a/1/Lesson1/project/index.html
+++ b/1/Lesson1/project/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Интернет-магазин</title>
-</head>
-<body>
-<header>
-    <button class="btn-cart" type="button">Крзина</button>
-</header>
-<main>
-    <div class="products"></div>
-</main>
-<script src="./js/main.js"></script>
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <button class="btn-cart" type="button">Корзина</button>
+      </header>
+      <main>
+        <div class="products"></div>
+      </main>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
