--- a/5/lesson5/index.html
+++ b/5/lesson5/index.html
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Lesson 5</title>
     <style>
-        .block {
-            width: 200px;
-            height: 200px;
-            background-color: #c0c0c0;
-        }
+      .block {
+        width: 200px;
+        height: 200px;
+        background-color: #c0c0c0;
+      }
 
-        .red {
-            background-color: red;
-        }
+      .red {
+        background-color: red;
+      }
 
-        .blue {
-            background-color: blue;
-        }
+      .blue {
+        background-color: blue;
+      }
     </style>
-</head>
-<body>
-<div id="app">
-    <!--    <h1>{{ title }}</h1>-->
-    <!--    <h3>{{ sayHello() }}</h3>-->
-    <!--    <a v-bind:href="link">Google</a>-->
-    <!--    <a :href="link">Google</a>-->
-    <!--    <div v-html="completeElement"></div>-->
-    <!--    <input type="text" v-model.lazy="name">-->
-    <!--    <p>{{ name }}</p>-->
-    <!--    <input type="number" v-model.number="number">-->
-    <!--    <p>{{ number }}</p>-->
+  </head>
+  <body>
+    <div id="app">
+      <!--<h1>{{ title }}</h1>
+      <h3>{{ sayHello() }}</h3>
+      <a v-bind:href="link">Google</a>
+      <a :href="link">Google</a>
+      <div v-html="completeElement"></div>
+      <input type="text" v-model.lazy="name" />
+      <p>{{ name }}</p>-->
+      <input type="number" v-model.number="number" />
+      <!--<p>{{ number }}</p>-->
 
-    <!--    <button v-on:click="counter++">Counter: {{ counter }}</button>-->
-    <!--    <button @click="increase(2, $event)">Counter: {{ counter > 10 ? 'Greater than 10' : 'Less than 10' }}</button>-->
+      <!--<button v-on:click="counter++">Counter: {{ counter }}</button>-->
+      <!--<button @click="increase(2, $event)">
+        Counter: {{ counter > 10 ? 'Greater than 10' : 'Less than 10' }}
+      </button>
+      <p @mousemove="getCoordinates($event)">
+        Current position {{ x }} / {{ y }}
+        <span @mousemove.stop>Don't catch the coordinates</span>
+      </p>
+      <div>
+        <button @click="counter++">Increase</button>
+        <button @click="counter--">Decrease</button>
+        <button @click="secondCounter++">Increase second counter</button>
+        <p>Counter: {{ counter }} | {{ secondCounter }}</p>
+        <p>Result: {{ result() }} | {{ computedResult }}</p>
+      </div>-->
 
-    <!--    <p @mousemove="getCoordinates($event)">-->
-    <!--        Current position {{ x }} / {{ y }}-->
-    <!--        <span @mousemove.stop>Don't catch the coordinates</span>-->
-    <!--    </p>-->
-    <!--    <div>-->
-    <!--        <button @click="counter++">Increase</button>-->
-    <!--        <button @click="counter&#45;&#45;">Decrease</button>-->
-    <!--        <button @click="secondCounter++">Increase second counter</button>-->
-    <!--        <p>Counter: {{ counter }} | {{ secondCounter }}</p>-->
-    <!--        <p>Result: {{ result() }} | {{ computedResult }}</p>-->
-    <!--    </div>-->
+      <!--    <div class="block" :style="{ backgroundColor: 'aqua' }"></div>-->
+      <!--    <div class="block" :style="someStyle"></div>-->
+      <!--    <div class="block" :class="{ red: isRed, blue: !isRed }" @click="isRed = !isRed"></div>-->
 
-    <!--    <div class="block" :style="{ backgroundColor: 'aqua' }"></div>-->
-    <!--    <div class="block" :style="someStyle"></div>-->
-    <!--    <div class="block" :class="{ red: isRed, blue: !isRed }" @click="isRed = !isRed"></div>-->
+      <!--<input type="number" v-model.number="width" />
+      <input type="text" v-model="color" />
+      <div class="block" :style="myStyle"></div>-->
 
-    <!--    <input type="text" v-model="width">-->
-    <!--    <input type="text" v-model="color">-->
-    <!--    <div class="block" :style="myStyle"></div>-->
+         <h2 v-if="show">I'm visible</h2>
+         <h2 v-else>Now I'm visible</h2>
 
-    <!--    <h2 v-if="show">I'm visible</h2>-->
-    <!--    <h2 v-else>Now I'm visible</h2>-->
-
-    <div class="products">
+      <div class="products">
         <div class="product" v-for="product of products" :key="product.id">
             <img :src="product.img" alt="">
-            <div class="description">
+            <d iv class="description">
                 <p>{{ product.title }}</p>
                 <p>{{ product.quantity }}</p>
                 <p>{{ product.price * product.quantity }}</p>
@@ -69,75 +70,91 @@
     </div>
     <button @click="addProduct">Add product</button>
     <button @click="products[1].quantity++">+ quantity</button>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script>
-    const app = new Vue({
-        el: '#app',
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
         data: {
-            show: true,
-            isRed: false,
-            title: 'Hello!',
-            name: '',
-            number: 0,
-            counter: 0,
-            secondCounter: 0,
-            x: 0,
-            y: 0,
-            width: 100,
-            color: '#ccc',
-            link: 'https://google.com',
-            completeElement: `<span>i'm new element <a href="https://google.com" id="link">google</a></span>`,
-            someStyle: {backgroundColor: 'aqua'},
-            products: [
-                {id: 1, img: 'https://via.placeholder.com/200x150', title: 'Notebook', price: 1000, quantity: 1},
-                {id: 2, img: 'https://via.placeholder.com/200x150', title: 'Mouse', price: 100, quantity: 1},
-                {id: 3, img: 'https://via.placeholder.com/200x150', title: 'Chair', price: 300, quantity: 1},
-            ],
+          show: true,
+          isRed: false,
+          title: "Hello!",
+          name: "",
+          number: 0,
+          counter: 0,
+          secondCounter: 0,
+          x: 0,
+          y: 0,
+          width: 100,
+          color: "#ccc",
+          link: "https://google.com",
+          completeElement: `<span>i'm new element <a href="https://google.com" id="link">google</a></span>`,
+          someStyle: { backgroundColor: "aqua" },
+          products: [
+            {
+              id: 1,
+              img: "https://via.placeholder.com/200x150",
+              title: "Notebook",
+              price: 1000,
+              quantity: 1,
+            },
+            {
+              id: 2,
+              img: "https://via.placeholder.com/200x150",
+              title: "Mouse",
+              price: 100,
+              quantity: 1,
+            },
+            {
+              id: 3,
+              img: "https://via.placeholder.com/200x150",
+              title: "Chair",
+              price: 300,
+              quantity: 1,
+            },
+          ],
         },
         methods: {
-            sayHello() {
-                this.title = 'Changed!';
-                return this.title;
-            },
-            increase(step, event) {
-                console.log(event);
-                this.counter += step;
-            },
-            getCoordinates(event) {
-                this.x = event.clientX;
-                this.y = event.clientY;
-            },
-            result() {
-                console.log('method');
-                return this.counter > 5 ? 'Greater than 5' : 'Less than 5';
-            },
-            addProduct() {
-                this.products.push(
-                    {
-                        id: 4,
-                        img: 'https://via.placeholder.com/200x150',
-                        title: 'Super Mouse',
-                        price: 1100,
-                        quantity: 1
-                    }
-                );
-            },
+          sayHello() {
+            this.title = "Changed!";
+            return this.title;
+          },
+          increase(step, event) {
+            console.log(event);
+            this.counter += step;
+          },
+          getCoordinates(event) {
+            this.x = event.clientX;
+            this.y = event.clientY;
+          },
+          result() {
+            console.log("method");
+            return this.counter > 5 ? "Greater than 5" : "Less than 5";
+          },
+          addProduct() {
+            this.products.push({
+              id: 4,
+              img: "https://via.placeholder.com/200x150",
+              title: "Super Mouse",
+              price: 1100,
+              quantity: 1,
+            });
+          },
         },
         computed: {
-            computedResult() {
-                console.log('computed');
-                return this.counter > 5 ? 'Greater than 5' : 'Less than 5';
-            },
-            myStyle() {
-                return {
-                    backgroundColor: this.color,
-                    width: `${this.width}px`,
-                    height: `${this.width}px`,
-                };
-            }
+          computedResult() {
+            console.log("computed");
+            return this.counter > 5 ? "Greater than 5" : "Less than 5";
+          },
+          myStyle() {
+            return {
+              backgroundColor: this.color,
+              width: `${this.width}px`,
+              height: `${this.width}px`,
+            };
+          },
         },
-    });
-</script>
-</body>
+      });
+    </script>
+  </body>
 </html>
