--- a/8/lesson8/index.html
+++ b/8/lesson8/index.html
@@ -8,22 +8,20 @@
     <title>Shop</title>
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 
 <body>
-   <div id="app">
-    <div class="wrapper">
-     <header-el></header-el>
-     <brand-el></brand-el>
-     <type-el></type-el>
-     <fetured-el></fetured-el>
-     <fetured-btn></fetured-btn>
-     <feature-el></feature-el>
-     <subscribe-el></subscribe-el>
-     <footer-el></footer-el>
-    </div>
-  </div>
+  <div id="wrapper">
+    <header-el></header-el>
+    <brand-el></brand-el>
+    <type-el></type-el>
+    <fetured-el></fetured-el>
+    <fetured-btn></fetured-btn>
+    <feature-el></feature-el>
+    <subscribe-el></subscribe-el>
+    <footer-el></footer-el>
+   </div>
   <script src="js/footer.js"></script>
   <script src="js/subscribe.js"></script>
   <script src="js/feature.js"></script>
