--- a/8/lesson8/html/catalog.html
+++ b/8/lesson8/html/catalog.html
@@ -9,38 +9,12 @@
 
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <script defer src="../js/scriptCat.js"></script>
+    <!--<script defer src="../js/scriptCat.js"></script>-->
 </head>
 
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="header__container _container">
-                <div class="header__logo">
-                    <a class="header__logo-img">
-                        <img src="../img/logo.png" alt="logo">
-                    </a>
-                    <button class="header__logo-search">
-						<img src="../img/search.png" alt="">
-					</button>
-                </div>
-                <div class="menu">
-                    <nav>
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="../index.html" class="menu__link"><img src="../img/menu.svg" alt="img"></a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="regBemBootstrap.html" class="menu__link"><img src="../img/user.svg" alt="img"></a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="cart.html" class="menu__link"><img src="../img/basket.svg" alt="img"></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>
+       <header-el></header-el>
         <section class="new">
             <div class="new__inside _container">
                 <h2 class="new__inside-left">NEW ARRIVALS </h2>
@@ -376,5 +350,7 @@
         </footer>
     </div>
 </body>
+<script src="js/header.js"></script>
+<script src="js/main.js"></script>
 
 </html>
