--- a/8/lesson8/Elastico/index.html
+++ b/8/lesson8/Elastico/index.html
@@ -17,62 +17,25 @@
 	<div id="app">
     <div class="containers">
       <div class="contents">
-       <header-el></header-el>
+       <div class="header">
+        <header-el></header-el>
+        <cart></cart>
+       </div>
        <menu-el></menu-el> 
-        <div class="side">
-        <span class="afo">Оставайтесь собой, двигаясь в лучшую сторону</span>
-          <div class="gambino"></div>
-          <products-el></products-el>
-        </div>
-        <div class="clr">
-          <div class="brands">
-            <a href="http://www.lada.ru/" target=_blank><img src="img/lada.jpg" alt="ВАЗ"></a>
-          </div>
-          <div class="brands">
-            <a href="http://www.uaz.ru/" target=_blank><img src="img/uas.jpg" alt="УАЗ"></a>
-          </div>
-          <div class="brands">
-            <a href="http://uzdaewoo.ru/" target=_blank><img src="img/daewoo.jpg" alt="ДЭУ"></a>
-          </div>
-          <div class="brands">
-            <a href="http://www.chevrolet.ru/" target=_blank><img src="img/chevrolet.jpg" alt="Шевроле"></a>
-          </div>
-        </div>
+       <side-el></side-el>
+       <brands-el></brands-el>
       </div>
   
-      <footer>
-        <div>
-          <h4><span>О нас</span></h4>
-          <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div>
-          <h4><span>Информация</span></h4>
-          <br>
-          <p><a href="#">О нас</a></p>
-          <p><a href="#">Проезд</a></p>
-          <p><a href="#">Дополнительно</a></p>
-        </div>
-        <div>
-          <h4><span>В помощь клиенту</span></h4>
-          <br>
-          <p><a href="#">Мой аккаунт</a></p>
-          <p><a href="#">История покупок</a></p>
-          <p><a href="#">Новости</a></p>
-        </div>
-      
-          <input type="search" name="foot">
-          <input type="submit" value="Поиск по сайту">
-        
-          <p>&copy; Все права защищены</p>
-      </footer>
+     <footer-el></footer-el>
     </div>
   </div>
 	<!--<script src="script/bootstrap.min.js"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-	<script src="script/products.js"></script>
+	<script src="script/footer.js"></script>
+	<script src="script/brands.js"></script>
+	<script src="script/side.js"></script>
 	<script src="script/menu.js"></script>
+	<script src="script/CartComp.js"></script>
 	<script src="script/header.js"></script>
 	<script src="script/main.js"></script>
 
