--- a/8/lesson8/Elastico/public/html/basket.html
+++ b/8/lesson8/Elastico/public/html/basket.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="app">
+    <h1>Страница корзины</h1>
     <cart></cart>
   </div>
 	<script src="../script/CartComp.js"></script>
