--- a/8/lesson8/Elastico/public/html/contacts.html
+++ b/8/lesson8/Elastico/public/html/contacts.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Контакты</title>
-  <link rel="stylesheet" media="(max-width: 640px)" href="style/style.css">
-  <link rel="stylesheet" media="(min-width: 640px)" href="style/style2.css">
+  <link rel="stylesheet" media="(max-width: 640px)" href="../style/style.css">
+  <link rel="stylesheet" media="(min-width: 640px)" href="../style/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:700|Lobster|Prosto+One&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="style/bootstrap.min.css">
-  <link rel="stylesheet" href="style/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="../style/bootstrap.min.css">
+  <link rel="stylesheet" href="../style/bootstrap-theme.min.css">
 
   <body>
     <div class="containers">
       <div class="contents">
         <header>
-          <img src="img/logo.png" width="40" alt="Логотип">
+          <img src="../img/logo.png" width="40" alt="Логотип">
           <p>Эластико</p>
           <div class="social">
             <script type="text/javascript">
@@ -44,18 +44,14 @@
           </div>
         </header>
 
-        <aside>
+        <aside class="menu">
 
           <!-- Выпадающее меню -->
           <ul>
             <li><a href="index.html">Главная</a></li>
             <li>
               <a href="catalog.html">Каталог
-						<ul>
-							<li><a href="#">Резиновые смеси</a></li>
-            <li><a href="#">Подвеска</a></li>
-            <li><a href="#">Другое</a></li>
-          </ul>
+					
           </a>
           </li>
           <li>
@@ -63,9 +59,7 @@
           </li>
           <li>
             <a href="#">Поддержка
-						<ul>
-							<li><a href="#">Сервисные центры</a></li>
-          </ul>
+						
           </a>
           </li>
           </ul>
